[package]
name = "auth-service"
edition = "2021"

[dependencies]
actix-web = "4.3.1"      # Web Framework
jsonwebtoken = "8.3.0"   # JWT
serde = { version = "1.0", features = ["derive"] }  # Serialization
chrono = { version = "0.4.26", features = ["serde"] }        # Time handling
dotenv = "0.15.0"        # Environment variables
bcrypt = "0.14.0"        # Password Hashing
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
